--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "프로그래머는 프로그래밍을 해야한다"
+title                    : "Code on"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Negitoromaki300"
@@ -94,10 +94,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Negitoromaki300"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "-"
+  location         : "-"
   email            :
   links:
     - label: "Email"
